--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@next/font": "^13.0.2",
+		"@next/font": "13.0.2",
 		"@types/node": "18.11.9",
 		"@types/react": "18.0.25",
 		"@types/react-dom": "18.0.8",
 		"eslint": "8.27.0",
 		"eslint-config-next": "13.0.2",
+		"i18next": "22.0.5",
 		"next": "13.0.2",
+		"next-i18next": "12.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-i18next": "12.0.0",
 		"typescript": "4.8.4"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.4.13",
-		"sass": "^1.56.1",
-		"tailwindcss": "^3.2.3"
-	}
+		"autoprefixer": "10.4.13",
+		"sass": "1.56.1",
+		"tailwindcss": "3.2.3"
+	},
+	"browserslist": [
+		">0.3%",
+		"not ie 11",
+		"not dead",
+		"not op_mini all"
+	]
 }
