added Header component

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"clean:soft": "rm -rf .cache"
 	},
 	"dependencies": {
+		"@headlessui/react": "1.7.4",
 		"@next/font": "13.0.2",
 		"@types/node": "18.11.9",
 		"@types/react": "18.0.25",
