--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "3.0.2",
     "autoprefixer": "10.4.13",
     "sass": "1.56.1",
     "tailwindcss": "3.2.3"
