--- a/package.json
+++ b/package.json
@@ -1,41 +1,50 @@
 {
-	"name": "kodjaz_frontend",
-	"version": "0.1.0",
-	"private": true,
-	"author": "Murat Jumashev <jumasheff@gmail.com>, Elza Mambetakunova <mambetakunova@gmail.com>, Zhanara Tolonbaeva <janaratolonbaeva@gmail.com",
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"clean": "npm run clean:soft && rm -rf node_modules package-lock.json",
-		"clean:soft": "rm -rf .cache"
-	},
-	"dependencies": {
-		"@headlessui/react": "1.7.4",
-		"@next/font": "13.0.2",
-		"@types/node": "18.11.9",
-		"@types/react": "18.0.25",
-		"@types/react-dom": "18.0.8",
-		"eslint": "8.27.0",
-		"eslint-config-next": "13.0.2",
-		"i18next": "22.0.5",
-		"next": "13.0.2",
-		"next-i18next": "12.1.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-i18next": "12.0.0",
-		"typescript": "4.8.4"
-	},
-	"devDependencies": {
-		"autoprefixer": "10.4.13",
-		"sass": "1.56.1",
-		"tailwindcss": "3.2.3"
-	},
-	"browserslist": [
-		">0.3%",
-		"not ie 11",
-		"not dead",
-		"not op_mini all"
-	]
+  "name": "kodjaz_frontend",
+  "version": "0.1.0",
+  "private": true,
+  "author": "Murat Jumashev <jumasheff@gmail.com>, Elza Mambetakunova <mambetakunova@gmail.com>, Zhanara Tolonbaeva <janaratolonbaeva@gmail.com",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "clean": "npm run clean:soft && rm -rf node_modules package-lock.json",
+    "clean:soft": "rm -rf .next"
+  },
+  "dependencies": {
+    "@headlessui/react": "1.7.4",
+    "@next/font": "13.0.2",
+    "@reduxjs/toolkit": "1.9.1",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "axios": "1.2.1",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
+    "i18next": "22.0.5",
+    "js-cookie": "3.0.1",
+    "jwt-decode": "3.1.2",
+    "next": "13.0.2",
+    "next-i18next": "12.1.0",
+    "next-redux-wrapper": "8.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.41.5",
+    "react-i18next": "12.0.0",
+    "react-redux": "8.0.5",
+    "redux-typescript": "1.2.1",
+    "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "3.0.2",
+    "autoprefixer": "10.4.13",
+    "sass": "1.56.1",
+    "tailwindcss": "3.2.3"
+  },
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ]
 }
