--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-i18next": "12.1.0",
     "next-redux-wrapper": "8.0.0",
     "react": "18.2.0",
+    "react-ace": "10.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.5",
     "react-i18next": "12.0.0",
