--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "js-cookie": "3.0.1",
     "jwt-decode": "3.1.2",
     "next": "13.0.2",
-    "next-auth": "^4.18.9",
+    "next-auth": "4.18.9",
     "next-i18next": "12.1.0",
     "next-redux-wrapper": "8.0.0",
     "react": "18.2.0",
