--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
-    "ace-builds": "^1.15.0",
+    "ace-builds": "1.15.0",
     "axios": "1.2.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
@@ -30,7 +30,7 @@
     "next-i18next": "12.1.0",
     "next-redux-wrapper": "8.0.0",
     "react": "18.2.0",
-    "react-accessible-accordion": "^5.0.0",
+    "react-accessible-accordion": "5.0.0",
     "react-ace": "10.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.5",
