--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.5",
     "react-i18next": "12.0.0",
-    "react-markdown": "^8.0.5",
+    "react-markdown": "8.0.5",
     "react-redux": "8.0.5",
     "redux-typescript": "1.2.1",
     "typescript": "4.8.4"
